--- a/index.html
+++ b/index.html
@@ -3,20 +3,26 @@
   <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
-    <link rel="icon" href="static/img/favicon.ico" type="image/x-icon">
-    <meta http-equiv="Content-Language" content="zh-cn">
+    <link rel="icon" href="static/img/title_share.png" type="image/x-png">
+    <meta http-equiv="Content-Language" content="zh-CN">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="format-detection" content="telephone=no">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="discription" content="Upick是一个面向华中科技大学在校师生的信息网站">
-    <meta name="discription" content="描述描述描述描述描述描述描述描述">
-    <title>Upick</title>
+    <meta name="description" content="Upick是一个面向华中科技大学在校师生的信息网站">
+    <meta name="description" content="描述描述描述描述描述描述描述描述">
+    <title>Upick | 校内店铺评价</title>
+    <style>
+      a[title='站长统计'] {
+        display: none;
+      }
+    </style>
   </head>
   <body>
     <div style="display: none;">
       <img src="static/img/title_share.png"/>
     </div>
     <div id="app"></div>
+    <script src="https://s19.cnzz.com/z_stat.php?id=1261738666&web_id=1261738666" language="JavaScript"></script>
   </body>
 </html>
