--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
         opacity: 1;
         transition: opacity 0.5s;
         transform: translateY(0);
+        z-index: 99999;
       }
       #loading > h1 {
         color: #fff;
