--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         position: fixed;
         width: 100%;
         height: 100%;
-        background-color: rgba(1,1,1,1);
+        background-color: rgba(255,255,255,1);
         top: 0;
         opacity: 1;
         transition: opacity 0.5s;
@@ -113,7 +113,7 @@
       }
       #loading.hidden {
         opacity: 0;
-        transition: opacity 0.5s, transform 0s 0.5s;
+        transition: opacity 0s, transform 0s 0.5s;
         transform: translateY(-100%);
       }
       .mint-swipe,.mint-swipe-items-wrap{
@@ -145,36 +145,115 @@
         background:#FFAC00;
       }
     </style>
-    <script type="text/javascript">
-      window.zhuge = window.zhuge || [];window.zhuge.methods = "_init debug identify track trackLink trackForm page".split(" ");
-      window.zhuge.factory = function(b) {return function() {var a = Array.prototype.slice.call(arguments);a.unshift(b);
-        window.zhuge.push(a);return window.zhuge;}};for (var i = 0; i < window.zhuge.methods.length; i++) {
-        var key = window.zhuge.methods[i];window.zhuge[key] = window.zhuge.factory(key);}window.zhuge.load = function(b, x) {
-        if (!document.getElementById("zhuge-js")) {var a = document.createElement("script");var verDate = new Date();
-          var verStr = verDate.getFullYear().toString()+ verDate.getMonth().toString() + verDate.getDate().toString();
-          a.type = "text/javascript";a.id = "zhuge-js";a.async = !0;a.src = (location.protocol == 'http:' ? "http://sdk.zhugeio.com/zhuge.min.js?v=" : 'https://zgsdk.zhugeio.com/zhuge.min.js?v=') + verStr;
-          a.onerror = function(){window.zhuge.identify = window.zhuge.track = function(ename, props, callback){if(callback && Object.prototype.toString.call(callback) === '[object Function]')callback();};};
-          var c = document.getElementsByTagName("script")[0];c.parentNode.insertBefore(a, c);window.zhuge._init(b, x)}};
-      window.zhuge.load('ba4287e612b54d47b35142cd8253aeaa');//配置应用的AppKey
-    </script>
+    <style>
+      @keyframes rotate {
+        0% {
+          transform: translateX(0)scale(1);
+          z-index: 3;
+        }
+        33.33% {
+          transform: translateX(200%)scale(1.5);
+          z-index: 3;
+        }
+        66.67% {
+          transform: translateX(400%)scale(1);
+          z-index: 2;
+        }
+        100% {
+          transform: translateX(0)scale(1);
+          z-index: 1;
+        }
+      }
+      #loading.hidden > .balls-wrapper {
+        opacity: 0;
+        transition: opacity 0s 1s;
+      }
+      #loading > .balls-wrapper {
+        width: 6rem;
+        height: 5rem;
+        position: absolute;
+        margin: auto;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        transform: scale(1.5);
+        opacity: 1;
+        transition: opacity 0s 1.2s;
+      }
+      .three-balls {
+        width: 6rem;
+        height: 1.2rem;
+        position: relative;
+      }
+
+      .balls-wrapper > h1 {
+        font-size: 0.8rem;
+        text-align: center;
+        height: 3.8rem;
+        line-height: 3.8rem;
+        color: #8d4c4c;
+        margin: 0;
+      }
+
+      .ball {
+        width: 20%;
+        height: 100%;
+        position: absolute;
+        border-radius: 50%;
+        top: 0;
+        bottom: 0;
+        margin: auto;
+        animation-name: rotate;
+        animation-iteration-count: 999999;
+        animation-duration: 1.8s;
+        animation-timing-function: linear;
+      }
+
+      .ball.ball1{
+        background-color: #FFAE00;
+        animation-delay: 0s;
+      }
+      .ball.ball2{
+        background-color: #ff7c1b;
+        animation-delay: 0.6s;
+      }
+      .ball.ball3{
+        background-color: #F05323;
+        animation-delay: 1.2s;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-    <div id="loading">
-      <h1>Loading...</h1>
+    <div id="loading" class="hidden">
+      <div class="balls-wrapper">
+        <div class="three-balls">
+          <div class="ball ball1"></div>
+          <div class="ball ball2"></div>
+          <div class="ball ball3"></div>
+        </div>
+        <h1>Loading...</h1>
+      </div>
     </div>
     <script type="application/javascript">
       /* eslint-disabled */
       (function () {
         var loading = document.getElementById('loading');
         window.closeLoading = function () {
+//          clearTimeout(window.startHandle)
+//          setTimeout(function () {
           loading.classList.add('hidden');
+//          }, 0)
         }
         window.showLoading = function () {
-          loading.classList.remove('hidden');
+          window.startHandle = setTimeout(function () {
+            loading.classList.remove('hidden');
+          }, 100)
         }
       })()
+      window.showLoading()
     </script>
   </body>
 </html>
