修改debug -> dev，完成了主页和列表页

--- a/index.html
+++ b/index.html
@@ -10,8 +10,15 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="description" content="发现校内优质店铺，吐槽校内黑心商家，让品质校园生活从 Upick 开始！">
-    <meta name="description" content="描述描述描述描述描述描述描述描述">
     <title>Upick | 校内店铺评价</title>
+    <script type="application/javascript">
+      /**
+       * 下面这段代码负责跳转到安全域名
+       */
+      if (window.location.href.indexOf('weixin.bingyan-tech.hustonline.net') < 0) {
+       /* window.location.href = 'http://weixin.bingyan-tech.hustonline.net/upick/index.html' */
+      }
+    </script>
     <!-- mobile device support -->
     <style type="text/css">
       body,
@@ -145,7 +152,7 @@
         background:#FFAC00;
       }
     </style>
-    <style>
+    <style type="text/css">
       @keyframes rotate {
         0% {
           transform: translateX(0)scale(1);
