修好主业不能分享；分享文案修改；html标题和document.title一直

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="description" content="发现校内优质店铺，吐槽校内黑心商家，让品质校园生活从 Upick 开始！">
-    <title>Upick | 校内店铺评价</title>
+    <title>华科优铺 | 校内店铺评价</title>
     <script type="application/javascript">
       /**
        * 下面这段代码负责跳转到安全域名
        */
       if (window.location.href.indexOf('weixin.bingyan-tech.hustonline.net') < 0) {
-       /* window.location.href = 'http://weixin.bingyan-tech.hustonline.net/upick/index.html' */
+       window.location.href = 'http://weixin.bingyan-tech.hustonline.net/devupick/'
       }
     </script>
     <!-- mobile device support -->
