修改分享图片；修改评论过多提示

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="description" content="发现校内优质店铺，吐槽校内黑心商家，让品质校园生活从 Upick 开始！">
+    <link rel="apple-touch-icon" sizes="300x300" href="static/img/title-share.png">
+    <link rel="icon" type="image/png" href="static/img/title-share.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="static/img/title-share.png" sizes="16x16">
+    <meta name="theme-color" content="#FF9833">
     <title>华科优铺 | 校内店铺评价</title>
     <script type="application/javascript">
       /**
