默认评分7；添加暂无评分和暂无评论

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
        * 下面这段代码负责跳转到安全域名
        */
       if (window.location.href.indexOf('weixin.bingyan-tech.hustonline.net') < 0) {
-        window.location.href = 'http://weixin.bingyan-tech.hustonline.net/devupick/'
+        // window.location.href = 'http://weixin.bingyan-tech.hustonline.net/devupick/'
       }
     </script>
     <!-- mobile device support -->
