--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
     <link rel="icon" type="image/png" href="static/img/title-share.png" sizes="16x16">
     <meta name="theme-color" content="#FF9833">
     <title>华科优铺 | 校内店铺评价</title>
+    <script src="https://s11.cnzz.com/z_stat.php?id=1261738666&web_id=1261738666" language="JavaScript"></script>
+    <script>
+      //声明_czc对象:
+      var _czc = _czc || [];
+      //绑定siteid，请用您的siteid替换下方"XXXXXXXX"部分
+      _czc.push(["_setAccount", "1261738666"]);
+    </script>
     <script type="application/javascript">
       /**
        * 下面这段代码负责跳转到安全域名
@@ -25,6 +32,9 @@
     </script>
     <!-- mobile device support -->
     <style type="text/css">
+      a[title='站长统计'] {
+        display: none;
+      }
       body,
       html{
         margin:0;
