--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
     <meta name="theme-color" content="#FF9833">
     <title>华科优铺 | 校内店铺评价</title>
     <script src="https://s11.cnzz.com/z_stat.php?id=1261738666&web_id=1261738666" language="JavaScript"></script>
+    <script type="text/javascript">
+      /**/
+      if (window.location.href.indexOf('freshman') >= 0) {
+        var cnzz_protocol = (("https:" === document.location.protocol) ? " https://" : " http://");
+        document.write(unescape("%3Cspan id='cnzz_stat_icon_1264592648'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s19.cnzz.com/stat.php%3Fid%3D1264592648' type='text/javascript'%3E%3C/script%3E"));
+      }
+    </script>
     <script>
       //声明_czc对象:
       var _czc = _czc || [];
@@ -32,6 +39,9 @@
     </script>
     <!-- mobile device support -->
     <style type="text/css">
+      span#cnzz_stat_icon_1264592648 {
+        display: none;
+      }
       a[title='站长统计'] {
         display: none;
       }
