添加实习期新人的专享推广cnzz

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
     <link rel="icon" type="image/png" href="static/img/title-share.png" sizes="16x16">
     <meta name="theme-color" content="#FF9833">
     <title>华科优铺 | 校内店铺评价</title>
+    <style type="text/css">
+      span#cnzz_stat_icon_1264592648 {
+        display: none;
+      }
+    </style>
     <script src="https://s11.cnzz.com/z_stat.php?id=1261738666&web_id=1261738666" language="JavaScript"></script>
     <script type="text/javascript">
       /**/
