添加跳转；评论列表保存scroll；评论列表名称过长...;主页slogan

--- a/index.html
+++ b/index.html
@@ -38,8 +38,11 @@
       /**
        * 下面这段代码负责跳转到安全域名
        */
-      if (window.location.href.indexOf('weixin.bingyan-tech.hustonline.net') < 0) {
-        // window.location.href = 'http://weixin.bingyan-tech.hustonline.net/devupick/'
+      if (window.location.href.indexOf('weixin.bingyan-tech.hustonline.net') < 0 &&
+        (window.location.href.indexOf('localhost') < 0 &&
+          window.location.href.indexOf('127.0.0.1') < 0)
+      ) {
+        window.location.href = 'http://weixin.bingyan-tech.hustonline.net/upick/'
       }
     </script>
     <!-- mobile device support -->
