添加-webkit-overflow-scrolling

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
       span#cnzz_stat_icon_1264592648 {
         display: none;
       }
+      ul {
+        -webkit-overflow-scrolling: touch;
+      }
     </style>
     <script src="https://s11.cnzz.com/z_stat.php?id=1261738666&web_id=1261738666" language="JavaScript"></script>
     <script type="text/javascript">
